# esp-claw-K10

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  README_CN.md
.gitlab/ci/: build.yml  build_apps.py  check_copyright_ignore.txt  deploy.yml  deploy_firmware.py  generate_firmware_json.py  pre-check.yml  rules.yml
application/: .build-rules.yml
application/basic_demo/: sdkconfig.defaults
application/basic_demo/boards/unihiker_k10/: board_devices.yaml  setup_device.c
application/basic_demo/components/unihiker_k10/boards/unihiker_k10/: board_devices.yaml  k10_audio_dac.c  setup_device.c
application/basic_demo/fatfs_image/router_rules/: router_rules.json
application/basic_demo/main/: app_claw.c  k10_extension.c
application/basic_demo/main/skills/: skills_list.json
application/basic_demo/main/web/: app.js  index.html  styles.css
application/edge_agent/components/cmd_wifi/: cmd_wifi.c
application/edge_agent/components/http_server/: CMakeLists.txt  http_server_assets.c  http_server_config_api.c  http_server_core.c  http_server_priv.h  http_server_webim_api.c  http_server_wechat_api.c  idf_component.yml
application/edge_agent/components/http_server/frontend_source/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
application/edge_agent/components/http_server/frontend_source/src/: App.tsx  index.css  index.tsx
application/edge_agent/components/http_server/include/: http_server.h
application/edge_agent/main/: CMakeLists.txt  main.c
components/claw_capabilities/cap_boards/tools/: generate_board_skill.py
components/claw_capabilities/cap_files/src/: cap_files.c
components/claw_capabilities/cap_im_feishu/skills/: skills_list.json
components/claw_capabilities/cap_im_local/: CMakeLists.txt
components/claw_capabilities/cap_im_qq/skills/: skills_list.json
components/claw_capabilities/cap_im_qq/src/: cap_im_qq.c
components/claw_capabilities/cap_im_tg/skills/: skills_list.json
components/claw_capabilities/cap_im_wechat/skills/: skills_list.json
components/claw_capabilities/cap_llm_inspect/skills/: skills_list.json
components/claw_capabilities/cap_lua/skills/: skills_list.json
components/claw_capabilities/cap_mcp_server/include/: cap_mcp_server.h
components/claw_capabilities/cap_router_mgr/skills/: skills_list.json
components/claw_capabilities/cap_scheduler/skills/: skills_list.json
components/claw_capabilities/cap_skill_mgr/src/: cap_skill_mgr.c  cmd_cap_skill.c
components/claw_capabilities/cap_time/skills/: cap_time.md  skills_list.json
components/claw_capabilities/cap_web_search/skills/: skills_list.json
components/claw_modules/claw_core/include/: claw_core.h
components/claw_modules/claw_core/src/: claw_core.c
components/claw_modules/claw_event_router/src/: claw_event_router.c
components/claw_modules/claw_event_router/test_apps/event_router_cli_test/: CMakeLists.txt
components/claw_modules/claw_event_router/test_apps/event_router_cli_test/main/: CMakeLists.txt  main.c
components/claw_modules/claw_memory/src/: claw_memory_storage.c
components/claw_modules/claw_skill/src/: claw_skill.c
components/common/app_claw/: CMakeLists.txt  Kconfig  app_capabilities.c  app_claw.c  app_lua_modules.c  idf_component.yml
components/common/wifi_manager/: wifi_manager.c
components/common/wifi_manager/include/: wifi_manager.h
components/lua_modules/lua_module_display/src/: display_hal.c
components/lua_modules/lua_module_environmental_sensor/: CMakeLists.txt  Kconfig  idf_component.yml
components/lua_modules/lua_module_environmental_sensor/lua_scripts/: basic_environmental_sensor.lua
components/lua_modules/lua_module_environmental_sensor/src/: lua_module_environmental_sensor.c
components/lua_modules/lua_module_event_publisher/skills/: skills_list.json
components/lua_modules/lua_module_fuel_gauge/: Kconfig
components/lua_modules/lua_module_fuel_gauge/skills/: skills_list.json
components/lua_modules/lua_module_imu/: CMakeLists.txt  Kconfig
components/lua_modules/lua_module_imu/src/: lua_module_imu.c
components/lua_modules/lua_module_ir/: CMakeLists.txt
components/lua_modules/lua_module_ir/skills/: lua_module_ir.md  skills_list.json
components/lua_modules/lua_module_ir/src/: lua_module_ir.c
components/lua_modules/lua_module_knob/skills/: skills_list.json
components/lua_modules/lua_module_magnetometer/: CMakeLists.txt  Kconfig
components/lua_modules/lua_module_magnetometer/skills/: skills_list.json
components/lua_modules/lua_module_magnetometer/src/: lua_module_magnetometer.c
components/lua_modules/lua_module_sci/: CMakeLists.txt
components/lua_modules/lua_module_sci/skills/: lua_module_sci.md  skills_list.json
docs/: .gitignore  LICENSE  astro.config.mjs  package.json5  pnpm-lock.yaml  tsconfig.json
docs/src/assets/: example-skill.md  router_rules.schema.json
docs/src/assets/features/: chat-coding.webm  event.webm  locallua.webm  mcp.webm  memory.webm  multi.webm
docs/src/assets/images/: LICENSE
docs/src/components/: DocsSiteTitle.astro  LinkToSource.astro  Sidebar.astro
docs/src/content/docs/en/reference-cap/: cap-files.mdx  cap-im-tg.mdx  cap-llm-inspect.mdx  cap-lua.mdx  cap-scheduler.mdx  cap-skill.mdx  cap-system.mdx  implement-capability.mdx  index.mdx  lua-modules.mdx
docs/src/content/docs/en/reference-core/: claw-cap.mdx  claw-core.mdx  claw-event-router.mdx  claw-memory.mdx  claw-skill.mdx  index.mdx
docs/src/content/docs/en/reference-project/: boot-and-runtime.mdx  build-from-source.mdx  configuration.mdx  console-usage.mdx  core-cap-event.mdx  dataflow-and-automation.mdx  index.mdx  lua.mdx  memory.mdx  skills-and-capability.mdx  (+1 more)
docs/src/flash-tool/: esp-flash.ts  firmware-db.ts  firmware.json  flash-page.ts  i18n.ts  nvs-gen.ts
docs/src/layouts/: SiteShell.astro
docs/src/pages/: index.astro
docs/src/pages/[lang]/: flash.astro  index.astro
docs/src/plugins/: remark-doc-links.ts
docs/src/site/: chrome-i18n.ts  home-i18n.ts  locales.ts
docs/src/styles/: homepage.css  starlight.css
docs/tools/: check-doc-line-alignment.ts
(+69 files in other folders)
